# neo-assetmaker

./: .gitattributes  .gitignore  .gitmodules  README.md  build.bat  build.cxfreeze.bat  build.py  installer.iss  main.py  main.spec  ourcesappoutvsworkbenchcontribterminalcommonscriptssafe_rm_aliases.ps1 } catch{} ; Write-Output [Trae CN] Safe Rm alias is not enabled, try to fix it now.  pyproject.toml  requirements.txt
.github/workflows/: build-app.yml  build.yml  release.yml
_mext/: __init__.py
_mext/core/: __init__.py  config.py  constants.py  service_manager.py
_mext/models/: __init__.py  comment.py  download.py  material.py  user.py
_mext/services/: __init__.py  api_client.py  api_worker.py  auth_service.py  download_engine.py  download_worker.py  fido2_client.py  fido2_worker.py  mtp_service.py  pkce_utils.py  usb_service.py
_mext/ui/: __init__.py  styles.py  widget.py
_mext/ui/components/: __init__.py  comment_section.py  creator_info_card.py  download_progress.py  fido2_credential_card.py  filter_panel.py  gallery_card.py  gallery_header.py  material_card.py  search_bar.py  thumbnail_loader.py  usb_device_card.py
_mext/ui/dialogs/: __init__.py  fido2_pin_dialog.py  fido2_touch_dialog.py  login_dialog.py
_mext/ui/layouts/: __init__.py  waterfall_layout.py
_mext/ui/pages/: __init__.py  creator_profile_page.py  discover_page.py  (+8 more)
_mext/utils/: __init__.py  crypto.py  platform.py
config/: __init__.py  config.json  config_manager.py  constants.py  epconfig.py  firmware_config.py  operator_db.py  user_settings.json
config/firmware/: default.firmware.json
core/: auto_save_service.py  crash_recovery_service.py  device_stream_service.py  error_handler.py  export_service.py  image_processor.py  legacy_converter.py  ocr_service.py  operator_lookup.py  optimized_processor.py  overlay_animator.py  overlay_renderer.py  sshAutoUpload.py  sshOperation.py  ssh_upload_service.py  transition_renderer.py  update_service.py  validator.py  video_processor.py
core/scripts/: hostStartDrm.sh
docs/: API.md  CHANGELOG.md  USER_MANUAL.md
gui/: __init__.py  main_window.py  qss_hot_reload.py  styles.py
gui/dialogs/: __init__.py  batch_convert_dialog.py  crash_recovery_dialog.py  export_progress_dialog.py  flasher_dialog.py  operator_confirm_dialog.py  pass_simulator_dialog.py  shortcuts_dialog.py  ssh_upload_progress_dialog.py  update_dialog.py  welcome_dialog.py
gui/widgets/: RemoteFileManager.py  basic_config_panel.py  config_panel.py  device_stream_widget.py  drop_overlay.py  fluent_group_box.py  frame_reader_thread.py  gl_video_renderer.py  json_preview.py  remote_page.py  setting_cards.py  settings_page.py  timeline.py  transition_preview.py  video_preview.py
resources/data/: current_templat.jso  handbookpos_table.json
resources/installer/: LICENSE.txt
simulator/: Cargo.toml
simulator/src/: main.rs
simulator/src/animation/: controller.rs  mod.rs
simulator/src/app/: mod.rs  simulator_app.rs  state.rs
simulator/src/config/: epconfig.rs  firmware_config.rs  mod.rs
simulator/src/ipc/: mod.rs  protocol.rs  server.rs
simulator/src/render/: bezier.rs  image_loader.rs  mod.rs  overlay.rs  text_renderer.rs  transition.rs
simulator/src/utils/: color.rs  mod.rs
simulator/src/video/: decoder.rs  mod.rs  player.rs
tools/: firmware_config_extractor.py
utils/: __init__.py  color_utils.py  enhanced_logger.py  file_utils.py  logger.py
