[project]
name = "neo-assetmaker"
version = "1.5.7"
description = "明日方舟通行证素材制作器"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "jsonschema>=4.17.0",
    "thefuzz>=0.22.0",
    "python-Levenshtein>=0.25.0",
]

[dependency-groups]
dev = [
    "cx_Freeze>=6.15.0",
]
